infrastructure/kubernetes/deployment-local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fiap-soat
  labels:
    app: fiap-soat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fiap-soat
  template:
    metadata:
      labels:
        app: fiap-soat
    spec:
      containers:
        - name: fiap-soat
          image: local:image
          imagePullPolicy: Never
          ports:
            - containerPort: 80
              name: http
          resources:
            limits:
              cpu: "200m"
              memory: "250Mi"
            requests:
              cpu: "100m"
              memory: "150Mi"
          # command:
          #   ["uvicorn", "src.api.app:app", "--host", "0.0.0.0", "--port", "80"]
