infrastructure/kubernetes/deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fiap-soad
  labels:
    app: fiap-soad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fiap-soad
  template:
    metadata:
      labels:
        app: fiap-soad
    spec:
      containers:
        - name: fiap-soad
          image: alceuramos/dev:latest
          ports:
            - containerPort: 80
              name: http
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
      imagePullSecrets:
        - name: dockerhub-secret
