infrastructure/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fiap-soat-service
spec:
  selector:
    app: fiap-soat
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
