infrastructure/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /fiap-soad/?(.*)
            backend:
              service:
                name: fiap-soad-service
                port:
                  number: 80
