infrastructure/kubernetes/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-app
  labels:
    app: foo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
        - name: foo-app
          image: registry.k8s.io/e2e-test-images/agnhost:2.39
          ports:
            - containerPort: 80
              name: http
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
          command:
            - /agnhost
            - netexec
            - --http-port
            - "8080"
---
kind: Service
apiVersion: v1
metadata:
  name: foo-service
spec:
  selector:
    app: foo
  ports:
    # Default port used by the image
    - port: 8080
# ---
# kind: Pod
# apiVersion: v1
# metadata:
#   name: bar-app
#   labels:
#     app: bar
# spec:
#   containers:
#     - command:
#         - /agnhost
#         - netexec
#         - --http-port
#         - "8080"
#       image: registry.k8s.io/e2e-test-images/agnhost:2.39
#       name: bar-app
# ---
# kind: Service
# apiVersion: v1
# metadata:
#   name: bar-service
# spec:
#   selector:
#     app: bar
#   ports:
#     # Default port used by the image
#     - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /foof
            backend:
              service:
                name: foo-service
                port:
                  number: 8080
          - pathType: Prefix
            path: /qwe(/|$)(.*)
            backend:
              service:
                name: fiap-soad-service
                port:
                  number: 80
# - pathType: Prefix
#   path: /bar(/|$)(.*)
#   backend:
#     service:
#       name: bar-service
#       port:
#         number: 8080
